# medialint

./: .gitignore  Makefile  README.md  meson.build
.github/workflows/: build.yml
src/: linter.c  linter.h  main.c  media_linter.c  media_linter.h  report.c  report.h
